src/test/ui/derives/derives-span-Debug-struct.stderr
error[E0277]: `Error` doesn't implement `std::fmt::Debug`
  --> $DIR/derives-span-Debug-struct.rs:8:5
   |
LL |     x: Error
   |     ^^^^^^^^ `Error` cannot be formatted using `{:?}`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `Error`
   = note: add `#[derive(Debug)]` or manually implement `std::fmt::Debug`
   = note: required because of the requirements on the impl of `std::fmt::Debug` for `&Error`
   = note: required for the cast to the object type `dyn std::fmt::Debug`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
